# todoer

./: .gitignore  CMakeLists.txt  Interpreter.h  README.md  Task.h  TaskGraph.h
.github/workflows/: tests.yml
include/: Expression.hpp  Interpreter.h  Interpreter.hpp  Lexer.hpp  Ops.h  Ops.hpp  Parser.hpp  Scheduler.hpp  Task.h  Task.hpp  TaskGraph.h  TaskGraph.hpp  ThreadPool.hpp  Todoer.hpp  Token.hpp
include/ops/: BinaryOps.hpp  NoOps.hpp  Ops.hpp  UnaryOps.hpp
src/: Expression.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Scheduler.cpp  Task.cpp  TaskGraph.cpp  Todoer.cpp  main.cpp
tests/: TestInterpreter.cpp  TestLexer.cpp  test_interpreter.cpp  test_parser.cpp
